--- a/views/authors/_createdauthor.ejs
+++ b/views/authors/_createdauthor.ejs
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myappjuly</title>
+    <title>Document</title>
 </head>
 <body>
-    <%- include('../partials/header.ejs') %>
-    <%- include('../partials/errorMessage.ejs') %>
-    <%- body %>
+    <p>name: <%=name%></p>
 </body>
 </html>
